fix(hana_shirabe_web): correct relative path in tsconfig paths
Adjusts the tsconfig.json paths mapping from "../deps/*" to "./../deps/*" to ensure correct module resolution, addressing issues with TypeScript's path resolution logic as noted in microsoft/TypeScript#62207.

--- a/apps/hana_shirabe_web/assets/tsconfig.json
+++ b/apps/hana_shirabe_web/assets/tsconfig.json
@@ -17,9 +17,10 @@
 // 按照需求随便改吧
 {
   "compilerOptions": {
+    // https://github.com/microsoft/TypeScript/issues/62207
     // "baseUrl": ".",
     "paths": {
-      "*": ["../deps/*"]
+      "*": ["./../deps/*"]
     },
     "allowJs": true,
     "noEmit": true
